--- a/bpfaas-spring-cloud-stream-binder-rabbit/bpfaas-spring-cloud-stream-binder-rabbit-core/pom.xml
+++ b/bpfaas-spring-cloud-stream-binder-rabbit/bpfaas-spring-cloud-stream-binder-rabbit-core/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.bpfaas</groupId>
 		<artifactId>bpfaas-spring-cloud-stream-binder-rabbit-parent</artifactId>
-		<version>3.0.0.RELEASE</version>
+		<version>3.0.1.RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>http-client</artifactId>
-			<version>2.1.0.RELEASE</version>
+			<version>3.12.0</version>
 		</dependency>
 	</dependencies>
 </project>
