--- a/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
+++ b/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.bpfaas</groupId>
 	<artifactId>bpfaas-spring-cloud-stream-binder-rabbit-parent</artifactId>
-	<version>3.0.0.RELEASE</version>
+	<version>3.0.1.RELEASE</version>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
@@ -11,11 +11,38 @@
 		<version>2.2.0.RELEASE</version>
 	</parent>
 	<properties>
-		<spring-cloud-stream.version>3.0.0.RELEASE</spring-cloud-stream.version>
+		<spring-cloud-stream.version>3.0.10.RELEASE</spring-cloud-stream.version>
 		<java.version>1.8</java.version>
-        <maven-checkstyle-plugin.includeTestSourceDirectory>true
-        </maven-checkstyle-plugin.includeTestSourceDirectory>
+    <maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
+		<repository.snapshotId>ossrh</repository.snapshotId>
+		<repository.snapshotUrl>https://oss.sonatype.org/content/repositories/snapshots/</repository.snapshotUrl>
+		<repository.releaseId>ossrh</repository.releaseId>
+		<repository.releaseUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</repository.releaseUrl>
 	</properties>
+
+	<licenses>
+			<license>
+					<name>The MIT License</name>
+					<url>https://opensource.org/licenses/mit/</url>
+					<distribution>repo</distribution>
+			</license>
+	</licenses>
+	<scm>
+			<url>https://github.com/bpfaas/java-bps-config-spring-cloud-starter.git</url>
+			<connection>https://github.com/bpfaas/java-bps-config-spring-cloud-starter.git</connection>
+	</scm>
+	<developers>
+			<developer>
+					<name>brainpoint</name>
+					<id>brainpoint</id>
+					<email>bpoint.lee@live.com</email>
+					<roles>
+							<role>Developer</role>
+					</roles>
+					<timezone>+8</timezone>
+			</developer>
+	</developers>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -40,130 +67,120 @@
 				<version>${spring-cloud-stream.version}</version>
 				<scope>test</scope>
 			</dependency>
-			<dependency>
-				<groupId>com.bpfaas</groupId>
-				<artifactId>bpfaas-spring-cloud-stream-binder-rabbit-test-support</artifactId>
-				<version>${project.version}</version>
-				<scope>test</scope>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<modules>
 		<module>bpfaas-spring-cloud-stream-binder-rabbit-core</module>
 		<module>bpfaas-spring-cloud-stream-binder-rabbit</module>
 		<module>bpfaas-spring-cloud-starter-stream-rabbit</module>
-		<module>bpfaas-spring-cloud-stream-binder-rabbit-test-support</module>
 	</modules>
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-antrun-plugin</artifactId>
-					<version>1.7</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<configuration>
-						<quiet>true</quiet>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<configuration>
-						<redirectTestOutputToFile>true</redirectTestOutputToFile>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-					<compilerArgument>-parameters</compilerArgument>
-				</configuration>
-			</plugin>
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-			</plugin> -->
-		</plugins>
-	</build>
-	<reporting>
-        <plugins>
-            <!-- <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin> -->
-        </plugins>
-    </reporting>
+
 	<profiles>
-		<profile>
-			<id>spring</id>
-			<repositories>
-				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>https://repo.spring.io/libs-snapshot-local</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-					<releases>
-						<enabled>false</enabled>
-					</releases>
-				</repository>
-				<repository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>https://repo.spring.io/libs-milestone-local</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</repository>
-				<repository>
-					<id>spring-releases</id>
-					<name>Spring Releases</name>
-					<url>https://repo.spring.io/release</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-			<pluginRepositories>
-				<pluginRepository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>https://repo.spring.io/libs-snapshot-local</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-					<releases>
-						<enabled>false</enabled>
-					</releases>
-				</pluginRepository>
-				<pluginRepository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>https://repo.spring.io/libs-milestone-local</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</pluginRepository>
-				<pluginRepository>
-					<id>spring-releases</id>
-					<name>Spring Releases</name>
-					<url>https://repo.spring.io/libs-release-local</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</pluginRepository>
-			</pluginRepositories>
-		</profile>
+			<profile>
+					<id>default</id>
+					<activation>
+							<activeByDefault>true</activeByDefault>
+					</activation>
+					<build>
+							<plugins>
+									<plugin>
+											<groupId>org.apache.maven.plugins</groupId>
+											<artifactId>maven-source-plugin</artifactId>
+											<version>2.2.1</version>
+											<executions>
+													<execution>
+															<phase>package</phase>
+															<goals>
+																	<goal>jar-no-fork</goal>
+															</goals>
+													</execution>
+											</executions>
+									</plugin>
+									<plugin>
+											<groupId>org.apache.maven.plugins</groupId>
+											<artifactId>maven-javadoc-plugin</artifactId>
+											<version>2.9.1</version>
+											<executions>
+													<execution>
+															<phase>package</phase>
+															<goals>
+																	<goal>jar</goal>
+															</goals>
+													</execution>
+											</executions>
+											<configuration>
+													<tags>
+															<tag>
+																	<name>date</name>
+															</tag>
+													</tags>
+											</configuration>
+									</plugin>
+									<plugin>
+											<groupId>org.apache.maven.plugins</groupId>
+											<artifactId>maven-gpg-plugin</artifactId>
+											<version>1.6</version>
+											<executions>
+													<execution>
+															<phase>verify</phase>
+															<goals>
+																	<goal>sign</goal>
+															</goals>
+													</execution>
+											</executions>
+									</plugin>
+							</plugins>
+					</build>
+					<distributionManagement>
+							<snapshotRepository>
+									<id>${repository.snapshotId}</id>
+									<url>{repository.snapshotUrl}</url>
+							</snapshotRepository>
+							<repository>
+									<id>${repository.releaseId}</id>
+									<url>${repository.releaseUrl}</url>
+							</repository>
+					</distributionManagement>
+			</profile>
 	</profiles>
+
+	<build>
+			<pluginManagement>
+					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+					<plugins>
+							<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+							<plugin>
+									<artifactId>maven-clean-plugin</artifactId>
+									<version>3.1.0</version>
+							</plugin>
+							<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+							<plugin>
+									<artifactId>maven-resources-plugin</artifactId>
+									<version>3.0.2</version>
+							</plugin>
+							<plugin>
+									<artifactId>maven-compiler-plugin</artifactId>
+									<version>3.8.0</version>
+							</plugin>
+							<plugin>
+									<artifactId>maven-surefire-plugin</artifactId>
+									<version>2.22.1</version>
+							</plugin>
+							<plugin>
+									<artifactId>maven-jar-plugin</artifactId>
+									<version>3.0.2</version>
+							</plugin>
+							<plugin>
+									<artifactId>maven-install-plugin</artifactId>
+									<version>2.5.2</version>
+							</plugin>
+							<plugin>
+									<artifactId>maven-deploy-plugin</artifactId>
+									<version>2.8.2</version>
+							</plugin>
+							<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+					</plugins>
+			</pluginManagement>
+	</build>
+
 </project>
