--- a/bps-config-client-spring-cloud-starter/pom.xml
+++ b/bps-config-client-spring-cloud-starter/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bpfaas</groupId>
     <artifactId>bps-config-client-spring-cloud-starter</artifactId>
-    <version>${revision}${revision.profile}</version>
+    <version>${revision}${changelist}</version>
     <packaging>jar</packaging>
 
     <name>bps-config-client-spring-cloud-starter</name>
@@ -35,8 +35,8 @@
 
     <properties>
         <!-- Project revision -->
-        <revision>0.0.1</revision>
-        <revision.profile>-RELEASE</revision.profile>
+        <revision>3.0.1</revision>
+        <changelist>.RELEASE</changelist>
         <repository.snapshotId>ossrh</repository.snapshotId>
         <repository.snapshotUrl>https://oss.sonatype.org/content/repositories/snapshots/</repository.snapshotUrl>
         <repository.releaseId>ossrh</repository.releaseId>
@@ -52,8 +52,8 @@
         <spring.boot.version>2.2.7.RELEASE</spring.boot.version>
         <spring.cloud-starter.version>2.2.3.RELEASE</spring.cloud-starter.version>
         <spring.cloud-config-client.version>2.2.3.RELEASE</spring.cloud-config-client.version>
-        <spring.cloud-vault-config.version>2.2.0.RELEASE</spring.cloud-vault-config.version>
-        <spring.cloud-bus.version>2.2.0.RELEASE</spring.cloud-bus.version>
+        <spring.cloud-bus.version>2.2.3.RELEASE</spring.cloud-bus.version>
+        <flatten-maven-plugin.version>1.2.2</flatten-maven-plugin.version>
         <lombok.version>1.18.12</lombok.version>
         <slf4j.version>1.7.30</slf4j.version>
         <febs.version>0.1.4</febs.version>
@@ -155,9 +155,7 @@
         <dependency>
             <groupId>com.bpfaas</groupId>
             <artifactId>bpfaas-spring-cloud-starter-stream-rabbit</artifactId>
-		    <version>3.0.0.RELEASE</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/../bpfaas-spring-cloud-stream-binder-rabbit/bpfaas-spring-cloud-starter-stream-rabbit/target/bpfaas-spring-cloud-starter-stream-rabbit-3.0.0.RELEASE.jar</systemPath>
+		    <version>${revision}${changelist}</version>
         </dependency>
 
     </dependencies>
@@ -197,7 +195,44 @@
                     <version>2.8.2</version>
                 </plugin>
                 <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+
+                <plugin>
+                    <!-- 转换版本号变量 -->
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>flatten-maven-plugin</artifactId>
+                    <version>${flatten-maven-plugin.version}</version>
+                    <configuration>
+                        <updatePomFile>true</updatePomFile>
+                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                        <!-- 生成文件位置 -->
+                        <outputDirectory>target</outputDirectory>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <?m2e execute onConfiguration?>
+                            <id>flatten</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>flatten</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>flatten.clean</id>
+                            <phase>clean</phase>
+                            <goals>
+                                <goal>clean</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
+        
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
