--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bpfaas</groupId>
     <artifactId>config</artifactId>
-    <version>0.0.1</version>
+    <version>3.0.1.RELEASE</version>
     <packaging>pom</packaging>
 
     <properties>
