--- a/bpfaas-spring-cloud-stream-binder-rabbit/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
+++ b/bpfaas-spring-cloud-stream-binder-rabbit/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.bpfaas</groupId>
 		<artifactId>bpfaas-spring-cloud-stream-binder-rabbit-parent</artifactId>
-		<version>3.0.1.RELEASE</version>
+		<version>3.0.2.RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -23,6 +23,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.6.5</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -47,16 +48,19 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
+			<version>2.0.9.RELEASE</version>
 			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
+			<version>5.3.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit</artifactId>
+			<version>2.4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
