--- a/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
+++ b/bpfaas-spring-cloud-stream-binder-rabbit/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.bpfaas</groupId>
 	<artifactId>bpfaas-spring-cloud-stream-binder-rabbit-parent</artifactId>
-	<version>3.0.1.RELEASE</version>
+	<version>3.0.2.RELEASE</version>
 	<packaging>pom</packaging>
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
@@ -11,7 +11,7 @@
 		<version>2.2.0.RELEASE</version>
 	</parent>
 	<properties>
-		<spring-cloud-stream.version>3.0.10.RELEASE</spring-cloud-stream.version>
+		<spring-cloud-stream.version>3.2.2</spring-cloud-stream.version>
 		<java.version>1.8</java.version>
     <maven-checkstyle-plugin.includeTestSourceDirectory>true</maven-checkstyle-plugin.includeTestSourceDirectory>
 		<repository.snapshotId>ossrh</repository.snapshotId>
