--- a/bps-config-server-novault-spring-cloud-starter/pom.xml
+++ b/bps-config-server-novault-spring-cloud-starter/pom.xml
@@ -35,8 +35,8 @@
 
     <properties>
         <!-- Project revision -->
-        <revision>3.0.4</revision>
-        <changelist>.RELEASE</changelist>
+        <revision>3.2.2</revision>
+        <changelist></changelist>
         <repository.snapshotId>ossrh</repository.snapshotId>
         <repository.snapshotUrl>https://oss.sonatype.org/content/repositories/snapshots/</repository.snapshotUrl>
         <repository.releaseId>ossrh</repository.releaseId>
@@ -50,6 +50,7 @@
 
         <!-- Dependency Versions -->
         <spring.cloud-starter-config.version>3.1.1</spring.cloud-starter-config.version>
+        <spring.cloud-config-client.version>3.1.1</spring.cloud-config-client.version>
         <spring.cloud-bus.version>3.1.0</spring.cloud-bus.version>
         <flatten-maven-plugin.version>1.2.2</flatten-maven-plugin.version>
         <lombok.version>1.18.12</lombok.version>
@@ -167,8 +168,8 @@
             <version>${spring.cloud-bus.version}</version>
 		</dependency>
         <dependency>
-            <groupId>com.bpfaas</groupId>
-            <artifactId>bpfaas-spring-cloud-starter-stream-rabbit</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
 		    <version>${revision}${changelist}</version>
         </dependency>
 
