--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.bpfaas</groupId>
     <artifactId>config</artifactId>
-    <version>3.0.4.RELEASE</version>
+    <version>3.2.2</version>
     <packaging>pom</packaging>
 
     <properties>
